@@ -1,5 +1,9 @@
 2006-08-10  Brian Warner  <warner@lothar.com>
 
+	* docs/Makefile (images): make sure images get built when
+	rendering the manual
+	* docs/images/Makefile: same
+
 	* buildbot/scripts/runner.py: rename 'buildbot master' to
 	'buildbot create-master', and 'buildbot slave' to 'buildbot
 	create-slave'
